--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -157,6 +157,11 @@
       min-height: 44px;
     }
 
+    button,
+    [role="button"] {
+      min-width: 44px;
+    }
+
     /* Remove tap highlight color */
     * {
       -webkit-tap-highlight-color: transparent;
